# sphinx-gha

./: LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/actions/cowsay/: action.yaml  action.yml
.github/workflows/: build.yml  pay-cow-taxes.yml
docs/: conf.py  index.rst  requirements.txt
sphinx_gha/: ext.py
